--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,6 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-/* p {
+p {
     word-break: break-all;
-} */
+}
